Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -28,7 +28,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt33050528"
       },
-      "description": "Genres: Drama, Music\nTags:Band/Artificial Intelligence/Urban Fantasy/Idol/Primarily Female Cast/Primarily Teen Cast/Urban/Female Protagonist/Virtual World/Vocal synth\nSet in modern day Shibuya, Ichika Hoshino, a high school girl and street musician, encounters an unknown version of Hatsune Miku after hearing a Miku song that she'd never heard before in a CD store. Ichika learns that this version of Miku is having trouble reaching people with her songs, so together they team up to try to touch the hearts of their audience through music.<br><br>\n\n(Source: Crunchyroll News, edited)"
+      "description": "Genres: Drama, Music\nTags:Band/Artificial Intelligence/Urban Fantasy/Idol/Primarily Female Cast/Primarily Teen Cast/Urban/Female Protagonist/Vocal synth/Virtual World\nSet in modern day Shibuya, Ichika Hoshino, a high school girl and street musician, encounters an unknown version of Hatsune Miku after hearing a Miku song that she'd never heard before in a CD store. Ichika learns that this version of Miku is having trouble reaching people with her songs, so together they team up to try to touch the hearts of their audience through music.<br><br>\n\n(Source: Crunchyroll News, edited)"
     },
     {
       "id": "tt21996220",
@@ -54,7 +54,7 @@
       "id": "tt35109348",
       "type": "movie",
       "name": "Aldnoah.Zero (Re+)",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185714-ALbL559oK2Q3.png",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185714-YYhn41FIOfmM.jpg",
       "behaviorHints": {
         "defaultVideoId": "tt35109348"
       },
@@ -91,12 +91,12 @@
       "description": "Genres: Action, Drama, Fantasy\nTags:Puppetry\nTheatrical follow-up to <i>Thunderbolt Fantasy: Touriken Yuuki 4</i>."
     },
     {
-      "id": "tt34348665",
+      "id": "tt35438167",
       "type": "movie",
       "name": "Oshiri Tantei: Star and Moon",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185643-2NbMhFMCtXOe.png",
       "behaviorHints": {
-        "defaultVideoId": "tt34348665"
+        "defaultVideoId": "tt35438167"
       },
       "description": "Genres: Comedy, Mystery\nTags:\nStory begins when Koala asks Butt Detective to find a missing relative who disappeared from an idol contest. The case takes Butt Detective to Stardust Island, the site of the contest, and also the home of the international criminal organization Phantom Thief Academy, headed by Phantom Thief G. Here, the organization advances its secret conspiracy, codenamed the Dark Age Plan. Butt Detective enters Stardust Island under the guise of an idol. At the same time, he joins forces with Phantom Thief U, who is out to steal back the valuable Moonlight Stone from Phantom Thief G. The story will also reveal more about Brown's past.\n<br><br>\n(Source: Anime News Network, edited)\n"
     }
