Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -51,6 +51,16 @@
       "description": "Genres: Comedy, Drama, Romance\nTags:Crossdressing/Agender/LGBTQ+ Themes/Primarily Teen Cast\nTheatrical follow-up to the TV anime <i>Senpai wa Otokonoko</i>."
     },
     {
+      "id": "tt32574149",
+      "type": "movie",
+      "name": "Mononoke: Hinezumi",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179852-QMXHXkPfosmF.jpg",
+      "behaviorHints": {
+        "defaultVideoId": "tt32574149"
+      },
+      "description": "Genres: Fantasy, Horror, Mystery, Psychological, Supernatural\nTags:\nSequel to <i>Mononoke: Karakasa</i> and second movie in the <i>Mononoke</i> movie trilogy."
+    },
+    {
       "id": "tt35109348",
       "type": "movie",
       "name": "Aldnoah.Zero (Re+)",
