Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -78,7 +78,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt34602994"
       },
-      "description": "Genres: Comedy, Mahou Shoujo, Sci-Fi, Slice of Life\nTags:\nA new film announced for the 10th anniversary of <i>Binan Koukou Chikyuu Bouei-bu</i>. <br><br>\n<i>Note: Relations are provisional and will be updated when more info is announced. </i>"
+      "description": "Genres: Comedy, Mahou Shoujo, Sci-Fi, Slice of Life\nTags:Primarily Male Cast\nA new film announced for the 10th anniversary of <i>Binan Koukou Chikyuu Bouei-bu</i>. <br><br>\n<i>Note: Relations are provisional and will be updated when more info is announced. </i>"
     },
     {
       "id": "tt33512868",
