Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -19,7 +19,7 @@
       "type": "series",
       "name": "The Apothecary Diaries Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176301-AclxpmzlKoBM.jpg",
-      "description": "Genres: Drama, Mystery\nTags:Medicine/Historical/Female Protagonist/Politics/Royal Affairs/Ancient China/Primarily Adult Cast/Foreign/Work/Seinen/Asexual/Class Struggle/Animals/Primarily Female Cast/Heterosexual/Chibi/Maids\nThe second season of <i>Kusuriya no Hitorigoto</i>.<br><br>\n\nMaomao and Jinshi face palace intrigue as a pregnant concubine's safety and a looming conspiracy collide.<br><br>\n\n(Source: Crunchyroll News)"
+      "description": "Genres: Drama, Mystery\nTags:Medicine/Historical/Politics/Female Protagonist/Royal Affairs/Ancient China/Primarily Adult Cast/Foreign/Work/Seinen/Class Struggle/Asexual/Animals/Primarily Female Cast/Heterosexual/Chibi/Maids\nThe second season of <i>Kusuriya no Hitorigoto</i>.<br><br>\n\nMaomao and Jinshi face palace intrigue as a pregnant concubine's safety and a looming conspiracy collide.<br><br>\n\n(Source: Crunchyroll News)"
     },
     {
       "id": "tt9679542",
@@ -54,21 +54,21 @@
       "type": "series",
       "name": "ZENSHU",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176273-whKlFCswinEm.jpg",
-      "description": "Genres: Comedy, Romance\nTags:Isekai/Female Protagonist/Drawing/Gods/Super Power/Magic/Meta/Anthropomorphism/Otaku Culture/Desert/Work/Animals/Robots/Elf/Archery/Office Lady/Heterosexual/Primarily Adult Cast/Tokusatsu/Henshin/Office\nAfter graduating from high school, Natsuko Hirose starts her career as an animator. Her talent quickly flourishes, and she makes her debut as a director in no time. Her first anime becomes a massive hit, sparking a social phenomenon and earning her recognition as an up-and-coming genius director. Her next project is set to be a romantic comedy movie themed around first love! However, having never been in love herself, Natsuko struggles to understand the concept of first love, and as a result, she’s unable to create the storyboard, causing the movie production to come to a standstill.<br>\n<br>\n(Source: MAPPA)"
+      "description": "Genres: Comedy, Romance\nTags:Isekai/Super Power/Female Protagonist/Drawing/Gods/Magic/Anthropomorphism/Meta/Otaku Culture/Desert/Animals/Work/Robots/Elf/Archery/Office Lady/Heterosexual/Primarily Adult Cast/Tokusatsu/Henshin/Office\nAfter graduating from high school, Natsuko Hirose starts her career as an animator. Her talent quickly flourishes, and she makes her debut as a director in no time. Her first anime becomes a massive hit, sparking a social phenomenon and earning her recognition as an up-and-coming genius director. Her next project is set to be a romantic comedy movie themed around first love! However, having never been in love herself, Natsuko struggles to understand the concept of first love, and as a result, she’s unable to create the storyboard, causing the movie production to come to a standstill.<br>\n<br>\n(Source: MAPPA)"
     },
     {
       "id": "tt31528958",
       "type": "series",
       "name": "Honey Lemon Soda",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175443-yeamxYxCwLSe.jpg",
-      "description": "Genres: Romance\nTags:Shoujo/Bullying/Coming of Age/Heterosexual/School/Rehabilitation/Urban/Female Protagonist/Primarily Teen Cast/Delinquents/Kuudere/Gyaru\nIn middle school, Uka Ishimori was nicknamed “Stone.”\n<br><br>\nIn order to change herself, she enrolled in Hachimitsu High School, known for its culture of student liberty. Seated in at the desk next to her in the same class is Kai Miura, a coolly freewheeling boy with lemon-colored hair. In truth, Uka met Kai once in middle school, and decided to attend Hachimitsu based on a single word he said to her.To Uka, the popular Kai is a distant presence.\n<br><br>\nYet somehow, Kai starts to look after Uka. With Kai encouraging her, Uka gradually begins to fit in with her classmates…\n<br><br>\nBut...Uka’s world is gradually changing with Kai’s presence. —\n<br><br>\nNow, I am in the center of the endlessly spreading light.\n<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Romance\nTags:Shoujo/Bullying/Heterosexual/Coming of Age/School/Rehabilitation/Female Protagonist/Primarily Teen Cast/Urban/Delinquents/Kuudere/Gyaru\nIn middle school, Uka Ishimori was nicknamed “Stone.”\n<br><br>\nIn order to change herself, she enrolled in Hachimitsu High School, known for its culture of student liberty. Seated in at the desk next to her in the same class is Kai Miura, a coolly freewheeling boy with lemon-colored hair. In truth, Uka met Kai once in middle school, and decided to attend Hachimitsu based on a single word he said to her.To Uka, the popular Kai is a distant presence.\n<br><br>\nYet somehow, Kai starts to look after Uka. With Kai encouraging her, Uka gradually begins to fit in with her classmates…\n<br><br>\nBut...Uka’s world is gradually changing with Kai’s presence. —\n<br><br>\nNow, I am in the center of the endlessly spreading light.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt33059860",
       "type": "series",
       "name": "I May Be a Guild Receptionist, but I’ll Solo Any Boss to Clock Out on Time",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx167143-SoFo5kOvlkbO.jpg",
-      "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Primarily Adult Cast/Female Protagonist/Dungeon/Office Lady/Magic/Super Power/Work/Gore/Tsundere\nAlina thought she had found the perfect job as a guild receptionist. It’s stable, safe, and has a super cute uniform. But this dream gig turns into an overtime nightmare whenever adventurers get stuck clearing a dungeon. Tired of the long nights, Alina starts taking down the bosses herself! She even earns the name Executioner for her impressive skills. Can she keep her identity a secret?\n<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Primarily Adult Cast/Female Protagonist/Dungeon/Office Lady/Magic/Super Power/Work/Tsundere/Gore\nAlina thought she had found the perfect job as a guild receptionist. It’s stable, safe, and has a super cute uniform. But this dream gig turns into an overtime nightmare whenever adventurers get stuck clearing a dungeon. Tired of the long nights, Alina starts taking down the bosses herself! She even earns the name Executioner for her impressive skills. Can she keep her identity a secret?\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32550272",
@@ -96,7 +96,7 @@
       "type": "series",
       "name": "Even Given the Worthless “Appraiser” Class, I’m Actually the Strongest",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178548-4QkzBuJAx8w7.jpg",
-      "description": "Genres: Action, Adventure, Comedy, Drama, Fantasy, Romance\nTags:Mixed Gender Harem/Male Protagonist/Dungeon/Gore/Class Struggle/Primarily Female Cast/Bullying/Survival/Body Horror\nEin has been saddled with the job of \"Appraiser,\" the weakest and least fortunate of all the jobs one can be born with, as the only power it grants is the ability to appraise things.\n\nTreated cruelly by all and reduced to a litter collector by his peers, Ein has grown to hate himself and lives his days in spineless self-abasement. But when he meets Yuuri, the spirit of the World Tree, and her protector, Ursula the sage, Ein's fate takes a drastic turn.<br>\n<br>\nWith the gift of a Spirit Eye from Yuuri and the help of Ursula in learning how to use it, Ein grows stronger and stronger, until he's ready to take Yuuri on her long-desired journey to meet her World Tree's sisters. He goes on to overcome all sorts of challenges, armed with his natural kindness and his new-found courage. <br><br> (Source: Crunchyroll)"
+      "description": "Genres: Action, Adventure, Comedy, Drama, Fantasy, Romance\nTags:Mixed Gender Harem/Male Protagonist/Dungeon/Gore/Class Struggle/Primarily Female Cast/Bullying/Survival/Body Horror/Female Harem/Travel\nEin has been saddled with the job of \"Appraiser,\" the weakest and least fortunate of all the jobs one can be born with, as the only power it grants is the ability to appraise things.\n\nTreated cruelly by all and reduced to a litter collector by his peers, Ein has grown to hate himself and lives his days in spineless self-abasement. But when he meets Yuuri, the spirit of the World Tree, and her protector, Ursula the sage, Ein's fate takes a drastic turn.<br>\n<br>\nWith the gift of a Spirit Eye from Yuuri and the help of Ursula in learning how to use it, Ein grows stronger and stronger, until he's ready to take Yuuri on her long-desired journey to meet her World Tree's sisters. He goes on to overcome all sorts of challenges, armed with his natural kindness and his new-found courage. <br><br> (Source: Crunchyroll)"
     },
     {
       "id": "tt33384314",
@@ -131,7 +131,7 @@
       "type": "series",
       "name": "Welcome to Japan, Ms. Elf!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx172439-sTda7baXB0Fh.jpg",
-      "description": "Genres: Comedy, Fantasy, Romance, Slice of Life\nTags:Iyashikei/Elf/Heterosexual/Isekai/Urban Fantasy/Magic/Food/Dragons/Dungeon/Language Barrier/Female Protagonist/Male Protagonist\nMs. Elf is intrigued by Japanese culture?!\n<br><br>\nWorking adult Kitase Kazuhiro’s hobby is sleeping. Ever since he was a child, he’s had exciting adventures in the mysterious other world he dreams about. One day, while exploring ancient ruins with an elf girl he befriended, he is unfortunately burned by the breath of a magic dragon he encounters.\n<br><br>\nWhen he awakens from his dream, an elf girl who shouldn’t be in his room is sleeping next to him… <br><br>\n\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Fantasy, Romance, Slice of Life\nTags:Iyashikei/Elf/Heterosexual/Isekai/Urban Fantasy/Magic/Food/Language Barrier/Dragons/Dungeon/Female Protagonist/Male Protagonist\nMs. Elf is intrigued by Japanese culture?!\n<br><br>\nWorking adult Kitase Kazuhiro’s hobby is sleeping. Ever since he was a child, he’s had exciting adventures in the mysterious other world he dreams about. One day, while exploring ancient ruins with an elf girl he befriended, he is unfortunately burned by the breath of a magic dragon he encounters.\n<br><br>\nWhen he awakens from his dream, an elf girl who shouldn’t be in his room is sleeping next to him… <br><br>\n\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32581027",
@@ -162,18 +162,18 @@
       "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Magic/Male Protagonist/Dungeon/Female Harem/Primarily Female Cast/Archery/Swordplay/Kemonomimi/Urban Fantasy\nYuke, a red mage, angrily declares that he's leaving Thunder Pike, the A-rank party he's been with for five years, because he's fed up with being insulted and ridiculed by the other members.<br>\n<br>\nWhile searching for a new party, he runs into his former students Marina, Silk, and Rain, and decides to join their party, Clover. Encouraged by their admiration of him as their teacher, Yuke leads them in completing several quests that show off his own extraordinary magic and skills while bringing out the girls' abilities to their fullest.<br>\n<br>\nThen, through an \"adventure broadcast\" by an artifact known as Camelot, Clover becomes well-known throughout society. The party's dream is to conquer Achromatic Darkness, the most challenging dungeon of all, but as they take on other dungeons in hopes of eventually achieving that goal, they gradually become entangled in chaos that threatens the whole world...\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt13129190",
-      "type": "series",
-      "name": "SK∞ Extra Part",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx136381-t6c5rfKjnqqd.jpg",
-      "description": "Genres: Action, Comedy, Drama, Sports\nTags:Skateboarding/Cute Boys Doing Cute Things/Primarily Male Cast/Male Protagonist/LGBTQ+ Themes/Boys' Love\nOriginal video animation for <i>SK∞ (Sk8 the Infinity)</i>. <br><br>\n\n<i>Note: Aniplex revealed during the \"Sk8 Masquerade of Love\" event that a new anime project for the original television anime SK∞ is in the works. Much later, revealed at the end of the \"∞WEEK\" special event, an OVA was announced alongside a second season.<br>\nPremiered in theaters on 01/24/2025. The home video was released on 03/19/2025.\n<br><b>Title and Relations are provisional and subject to change when more information is released.</b></i>"
-    },
-    {
       "id": "tt33058180",
       "type": "series",
       "name": "From Bureaucrat to Villainess: Dad's Been Reincarnated!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx172453-7iYNTAEZpNsJ.png",
       "description": "Genres: Comedy, Fantasy\nTags:Villainess/School/Gender Bending/Isekai/Female Protagonist/Age Regression/Otaku Culture/Seinen/Video Games/Meta/Male Protagonist/Magic/Nekomimi/Tsundere/Maids/Mixed Gender Harem/Royal Affairs\nAfter a traffic accident, 52-year-old civil servant Kenzaburou Tondabayashi awakens to find he's become Grace Auvergne, a duke's daughter, and more importantly the villainess of an otome game. Not wanting to get in the way of the happy endings of the young characters around him, Grace sets out to play the role of the villain, but whether it's due to Kenzaburou's memories of being an affectionate parent getting in the way or not being able to remember those pesky foreign names properly, it ends up being a lot harder than it looks... "
+    },
+    {
+      "id": "tt13129190",
+      "type": "series",
+      "name": "SK∞ Extra Part",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx136381-t6c5rfKjnqqd.jpg",
+      "description": "Genres: Action, Comedy, Drama, Sports\nTags:Skateboarding/Cute Boys Doing Cute Things/Primarily Male Cast/Male Protagonist/LGBTQ+ Themes/Boys' Love\nOriginal video animation for <i>SK∞ (Sk8 the Infinity)</i>. <br><br>\n\n<i>Note: Aniplex revealed during the \"Sk8 Masquerade of Love\" event that a new anime project for the original television anime SK∞ is in the works. Much later, revealed at the end of the \"∞WEEK\" special event, an OVA was announced alongside a second season.<br>\nPremiered in theaters on 01/24/2025. The home video was released on 03/19/2025.\n<br><b>Title and Relations are provisional and subject to change when more information is released.</b></i>"
     },
     {
       "id": "tt34621652",
@@ -271,7 +271,7 @@
       "type": "series",
       "name": "Anyway, I'm Falling in Love with You.",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175409-ZYYEw0H6QypN.jpg",
-      "description": "Genres: Drama, Romance\nTags:Shoujo/Male Harem/Female Protagonist/Primarily Male Cast/Heterosexual/School/Coastal/Swimming\nIt's July 1, 2020. Mizuha, a high school second-year, is having the worst seventeenth birthday ever. She's missing her chance to get close to the older student she admires, and her parents didn't even remember that it's her birthday. Worst of all, there's a new and unknown infectious disease making the rounds, so all her club tournaments and school trips have been canceled.<br>\n<br>\nShe's convinced that she'll never have the dazzling youth that she's always dreamed of... but then her childhood friend, Mizuki, suddenly declares himself a candidate to be her boyfriend.<br>\n<br>\nThis is a school youth story about four childhood friends who grew up like family, one being the heroine, Nishino Mizuha, and the four boys she grew up with whom she sees as family.\n<br><br>(Source: Crunchyroll)"
+      "description": "Genres: Drama, Romance\nTags:Shoujo/Female Protagonist/Male Harem/Primarily Male Cast/Heterosexual/School/Coastal/Swimming\nIt's July 1, 2020. Mizuha, a high school second-year, is having the worst seventeenth birthday ever. She's missing her chance to get close to the older student she admires, and her parents didn't even remember that it's her birthday. Worst of all, there's a new and unknown infectious disease making the rounds, so all her club tournaments and school trips have been canceled.<br>\n<br>\nShe's convinced that she'll never have the dazzling youth that she's always dreamed of... but then her childhood friend, Mizuki, suddenly declares himself a candidate to be her boyfriend.<br>\n<br>\nThis is a school youth story about four childhood friends who grew up like family, one being the heroine, Nishino Mizuha, and the four boys she grew up with whom she sees as family.\n<br><br>(Source: Crunchyroll)"
     },
     {
       "id": "tt32485245",
@@ -299,7 +299,7 @@
       "type": "series",
       "name": "BanG Dream! Ave Mujica",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169295-WxoGTeMbje4T.jpg",
-      "description": "Genres: Drama, Music, Psychological\nTags:Band/Female Protagonist/Primarily Female Cast/Metal Music/Acting/Full CGI/Primarily Teen Cast/Musical Theater/Urban/Rock Music/Ojou-sama\n<i>\"Will you give me the rest of your life?\"</i>\n<br><br>\nAfter losing everything in a single night, Sakiko Togawa reaches out toward an even deeper abyss, one that will drag everyone around her down as well. Gathering the lives of girls burdened with their own troubles and desires, Sakiko raises the curtain on a perfect masquerade.\n<br><br>\n<i>\"Welcome to the world of Ave Mujica.\"<br><br></i>\n\nOn a stage where sorrow, death, fear, love—even the solace of forgetting—are stripped away, will their masks be torn off and shatter into oblivion, or will they….<br><br>\n(Source: Bushiroad) "
+      "description": "Genres: Drama, Music, Psychological\nTags:Band/Primarily Female Cast/Female Protagonist/Acting/Metal Music/Full CGI/Primarily Teen Cast/Musical Theater/Urban/Rock Music/Ojou-sama\n<i>\"Will you give me the rest of your life?\"</i>\n<br><br>\nAfter losing everything in a single night, Sakiko Togawa reaches out toward an even deeper abyss, one that will drag everyone around her down as well. Gathering the lives of girls burdened with their own troubles and desires, Sakiko raises the curtain on a perfect masquerade.\n<br><br>\n<i>\"Welcome to the world of Ave Mujica.\"<br><br></i>\n\nOn a stage where sorrow, death, fear, love—even the solace of forgetting—are stripped away, will their masks be torn off and shatter into oblivion, or will they….<br><br>\n(Source: Bushiroad) "
     },
     {
       "id": "tt34621609",
