--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -89,7 +89,7 @@
       "type": "series",
       "name": "I Have a Crush at Work",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179696-1MAqXYVXT7IT.jpg",
-      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Heterosexual/Seinen/Primarily Adult Cast/Office/Office Lady/Female Protagonist/Male Protagonist/Work\nYui Mitsuya and Masugu Tateishi aren't just any coworkers-they totally have the hots for each other. His helpful yet humble attitude makes her giddy, and her cuteness leaves him grinning like a fool. Problem is, they're trying to keep their new relationship under wraps to avoid making things awkward at work. But seeing how they can't keep their hands off each other, they run the risk of spilling their little secret with each passing day at the office.\n<br><br>\n(Source: Kodansha US)"
+      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Heterosexual/Seinen/Primarily Adult Cast/Office/Female Protagonist/Office Lady/Male Protagonist/Work\nYui Mitsuya and Masugu Tateishi aren't just any coworkers-they totally have the hots for each other. His helpful yet humble attitude makes her giddy, and her cuteness leaves him grinning like a fool. Problem is, they're trying to keep their new relationship under wraps to avoid making things awkward at work. But seeing how they can't keep their hands off each other, they run the risk of spilling their little secret with each passing day at the office.\n<br><br>\n(Source: Kodansha US)"
     },
     {
       "id": "tt34620612",
@@ -110,7 +110,7 @@
       "type": "series",
       "name": "Ameku M.D.: Doctor Detective",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176642-lgDtPlodCMRm.jpg",
-      "description": "Genres: Mystery, Slice of Life\nTags:Medicine/Detective/Female Protagonist/Episodic/Primarily Adult Cast/Crime/Police/Twins\nTen’ikai General Hospital’s Supervisory Department of Diagnostic Pathology handles cases other physicians deem too difficult to treat. It’s also where bizarre mysteries surface, from unexplained illnesses to strange murders even the police can’t solve. At the center of it all is Takao Ameku, a brilliant doctor determined to reveal the shocking truth behind these anomalies.\n<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Mystery, Slice of Life\nTags:Medicine/Detective/Female Protagonist/Episodic/Crime/Primarily Adult Cast/Police/Twins\nTen’ikai General Hospital’s Supervisory Department of Diagnostic Pathology handles cases other physicians deem too difficult to treat. It’s also where bizarre mysteries surface, from unexplained illnesses to strange murders even the police can’t solve. At the center of it all is Takao Ameku, a brilliant doctor determined to reveal the shocking truth behind these anomalies.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32579866",
@@ -334,7 +334,7 @@
       "type": "series",
       "name": "You and Idol Precure ♪",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185073-qxDBOwjnK3wN.png",
-      "description": "Genres: Action, Fantasy, Mahou Shoujo, Music\nTags:Female Protagonist/Idol/Dancing/Magic/Cute Girls Doing Cute Things/Henshin/Fairy/Primarily Female Cast/Urban Fantasy/Urban/Tokusatsu/Restaurant/Kids\nThe main character, Sakura Uta, is a second-year middle school student who loves to sing. One day, she meets the fairy Purirun that has come to search for the Legendary Protectors, Idol Precure! Purirun's hometown, KirakiLand has been plunged into total darkness by Darkine, the boss of the Chokkiri Gang. Meanwhile, the sparkles of the townspeople are being stolen by the Chokkiri Gang... it's a huge pinch!<br>\n\"I want to make it sparkle sparkly! Here is my song!\" - With this determination, Uta transforms into the Legendary Protector, Cure Idol! She sings, dances, and gives fan service, making it sparkle no matter how pitch-black it is!"
+      "description": "Genres: Action, Fantasy, Mahou Shoujo, Music\nTags:Female Protagonist/Idol/Dancing/Magic/Cute Girls Doing Cute Things/Henshin/Kids/Fairy/Primarily Female Cast/Urban Fantasy/Urban/Tokusatsu/Restaurant\nThe main character, Sakura Uta, is a second-year middle school student who loves to sing. One day, she meets the fairy Purirun that has come to search for the Legendary Protectors, Idol Precure! Purirun's hometown, KirakiLand has been plunged into total darkness by Darkine, the boss of the Chokkiri Gang. Meanwhile, the sparkles of the townspeople are being stolen by the Chokkiri Gang... it's a huge pinch!<br>\n\"I want to make it sparkle sparkly! Here is my song!\" - With this determination, Uta transforms into the Legendary Protector, Cure Idol! She sings, dances, and gives fan service, making it sparkle no matter how pitch-black it is!"
     },
     {
       "id": "tt5296398",
