Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -19,7 +19,7 @@
       "type": "series",
       "name": "The Apothecary Diaries Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176301-AclxpmzlKoBM.jpg",
-      "description": "Genres: Drama, Mystery\nTags:Medicine/Historical/Female Protagonist/Politics/Royal Affairs/Ancient China/Primarily Adult Cast/Foreign/Work/Seinen/Class Struggle/Asexual/Animals/Primarily Female Cast/Heterosexual/Chibi/Maids\nThe second season of <i>Kusuriya no Hitorigoto</i>.<br><br>\n\nMaomao and Jinshi face palace intrigue as a pregnant concubine's safety and a looming conspiracy collide.<br><br>\n\n(Source: Crunchyroll News)"
+      "description": "Genres: Drama, Mystery\nTags:Medicine/Historical/Female Protagonist/Politics/Royal Affairs/Ancient China/Primarily Adult Cast/Foreign/Work/Class Struggle/Animals/Primarily Female Cast/Heterosexual/Chibi/Maids\nThe second season of <i>Kusuriya no Hitorigoto</i>.<br><br>\n\nMaomao and Jinshi face palace intrigue as a pregnant concubine's safety and a looming conspiracy collide.<br><br>\n\n(Source: Crunchyroll News)"
     },
     {
       "id": "tt9679542",
@@ -54,7 +54,7 @@
       "type": "series",
       "name": "ZENSHU",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176273-whKlFCswinEm.jpg",
-      "description": "Genres: Comedy, Romance\nTags:Magic/Isekai/Super Power/Female Protagonist/Drawing/Anthropomorphism/Gods/Meta/Otaku Culture/Heterosexual/Desert/Primarily Adult Cast/Work/Animals/Office Lady/Robots/Elf/Archery/Tokusatsu/Henshin/Office\nAfter graduating from high school, Natsuko Hirose starts her career as an animator. Her talent quickly flourishes, and she makes her debut as a director in no time. Her first anime becomes a massive hit, sparking a social phenomenon and earning her recognition as an up-and-coming genius director. Her next project is set to be a romantic comedy movie themed around first love! However, having never been in love herself, Natsuko struggles to understand the concept of first love, and as a result, she’s unable to create the storyboard, causing the movie production to come to a standstill.<br>\n<br>\n(Source: MAPPA)"
+      "description": "Genres: Comedy, Romance\nTags:Magic/Isekai/Super Power/Female Protagonist/Drawing/Anthropomorphism/Gods/Otaku Culture/Meta/Heterosexual/Desert/Primarily Adult Cast/Work/Animals/Office Lady/Robots/Elf/Archery/Tokusatsu/Henshin/Office\nAfter graduating from high school, Natsuko Hirose starts her career as an animator. Her talent quickly flourishes, and she makes her debut as a director in no time. Her first anime becomes a massive hit, sparking a social phenomenon and earning her recognition as an up-and-coming genius director. Her next project is set to be a romantic comedy movie themed around first love! However, having never been in love herself, Natsuko struggles to understand the concept of first love, and as a result, she’s unable to create the storyboard, causing the movie production to come to a standstill.<br>\n<br>\n(Source: MAPPA)"
     },
     {
       "id": "tt33059860",
@@ -201,7 +201,7 @@
       "type": "series",
       "name": "Medalist",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx165171-nTOHsbh3pThN.jpg",
-      "description": "Genres: Drama, Psychological, Sports\nTags:Ice Skating/Athletics/Work/Female Protagonist/Found Family/Seinen/Rehabilitation/Primarily Child Cast/CGI/Musical Theater\nTsukasa, whose dreams were crushed. Inori, left to fend for herself. These two share a dream...and their tenacity may be the only thing that sees them through. Their destination? The ice...on the world's stage! <br>\n<br>\n(Source: Kodansha USA) "
+      "description": "Genres: Drama, Psychological, Sports\nTags:Ice Skating/Athletics/Work/Female Protagonist/Found Family/Seinen/Primarily Child Cast/CGI/Rehabilitation/Musical Theater\nTsukasa, whose dreams were crushed. Inori, left to fend for herself. These two share a dream...and their tenacity may be the only thing that sees them through. Their destination? The ice...on the world's stage! <br>\n<br>\n(Source: Kodansha USA) "
     },
     {
       "id": "tt34621291",
@@ -215,7 +215,7 @@
       "type": "series",
       "name": "Flower and Asura",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178022-gB3zAfazGBJ6.jpg",
-      "description": "Genres: Drama, Slice of Life\nTags:School/School Club/Acting/Primarily Teen Cast/Female Protagonist/Coastal/Seinen/LGBTQ+ Themes\nOn the picturesque island of Tonakijima with a population of only 600, Hana’s favorite pastime is reading literature to the island’s children. Her narration skills are second to none, and Mizuki, the president of the school’s broadcasting club immediately recognizes Hana’s ability to engage with others and draw them into her recitations. Invited by Mizuki to join the club, Hana embarks on a journey to discover her true love of reading — and maybe even change the course of her life along the way.<br><br>\n\n(Source: HIDIVE)"
+      "description": "Genres: Drama, Slice of Life\nTags:School/School Club/Acting/Primarily Teen Cast/Female Protagonist/Seinen/Coastal/LGBTQ+ Themes\nOn the picturesque island of Tonakijima with a population of only 600, Hana’s favorite pastime is reading literature to the island’s children. Her narration skills are second to none, and Mizuki, the president of the school’s broadcasting club immediately recognizes Hana’s ability to engage with others and draw them into her recitations. Invited by Mizuki to join the club, Hana embarks on a journey to discover her true love of reading — and maybe even change the course of her life along the way.<br><br>\n\n(Source: HIDIVE)"
     },
     {
       "id": "tt24326724",
@@ -250,7 +250,7 @@
       "type": "series",
       "name": "Promise of Wizard",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170916-WNdKmGcOQhuO.jpg",
-      "description": "Genres: Fantasy\nTags:Magic/Ensemble Cast/Josei/Primarily Male Cast/Isekai/Witch/Female Protagonist/Male Harem/Primarily Adult Cast\nOn a moonlit night, Akira Masaki finds herself in a magical world where wizards and humans coexist. Every year, they must face an enormous, deadly moon that attacks the planet. Their only hope lies with the Wizards of the Sage, appointed to fight the supernatural threat. But Akira soon discovers she wasn’t summoned by chance—she was chosen to lead them in battle.<br>\n<br>\n(Source: Crunchyroll)<br>\n<br>\n<i>Note: Animation project for Mahoutsukai no Yakusoku announced during the stream event \"Mahoutsukai no Yakusoku 4-Shuunen Kinen Tokuban: Mahoyaku 4-Shuunen Goukon\" held on Nov 12, 2023."
+      "description": "Genres: Fantasy\nTags:Magic/Ensemble Cast/Primarily Male Cast/Isekai/Witch/Female Protagonist/Male Harem/Primarily Adult Cast\nOn a moonlit night, Akira Masaki finds herself in a magical world where wizards and humans coexist. Every year, they must face an enormous, deadly moon that attacks the planet. Their only hope lies with the Wizards of the Sage, appointed to fight the supernatural threat. But Akira soon discovers she wasn’t summoned by chance—she was chosen to lead them in battle.<br>\n<br>\n(Source: Crunchyroll)<br>\n<br>\n<i>Note: Animation project for Mahoutsukai no Yakusoku announced during the stream event \"Mahoutsukai no Yakusoku 4-Shuunen Kinen Tokuban: Mahoyaku 4-Shuunen Goukon\" held on Nov 12, 2023."
     },
     {
       "id": "tt26713948",
