--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -26,14 +26,14 @@
       "type": "series",
       "name": "Dr. STONE SCIENCE FUTURE",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx172019-y0dLlAdingR2.jpg",
-      "description": "Genres: Action, Adventure, Comedy, Sci-Fi\nTags:Educational/Ships/Survival/Male Protagonist/Spearplay/Post-Apocalyptic/Ensemble Cast/Military/Swordplay/Samurai/Coastal/Found Family/Lost Civilization/Outdoor/Foreign/Shounen/Gambling/Tomboy\nThe first cour of the fourth season of <i>Dr.STONE</i>.<br><br>\n\nSenkuu and the Kingdom of Science revive Tsukasa and build a spaceship to reach 'Why Man' on the Moon!<br><br>\n(Source: Crunchyroll News, edited)"
+      "description": "Genres: Action, Adventure, Comedy, Sci-Fi\nTags:Educational/Ships/Survival/Male Protagonist/Spearplay/Post-Apocalyptic/Ensemble Cast/Military/Swordplay/Samurai/Coastal/Found Family/Lost Civilization/Outdoor/Foreign/Shounen/Tomboy/Gambling\nThe first cour of the fourth season of <i>Dr.STONE</i>.<br><br>\n\nSenkuu and the Kingdom of Science revive Tsukasa and build a spaceship to reach 'Why Man' on the Moon!<br><br>\n(Source: Crunchyroll News, edited)"
     },
     {
       "id": "tt28919914",
       "type": "series",
       "name": "The 100 Girlfriends Who Really, Really, Really, Really, REALLY Love You Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx172258-CFvhqor0blLV.jpg",
-      "description": "Genres: Comedy, Ecchi, Romance\nTags:Female Harem/Primarily Female Cast/Parody/Surreal Comedy/Male Protagonist/Meta/Slapstick/Polyamorous/Ensemble Cast/Primarily Teen Cast/Tsundere/Heterosexual/Found Family/Seinen/Kuudere\nThe second season of <i>Kimi no Koto ga Dai Dai Dai Dai Daisuki na 100-nin no Kanojo.</i><br><br>\nRentaro meets new soulmates, balancing comedic chaos and heartfelt moments as his relationships deepen.\n<br><br>\n(Source: Crunchyroll News)"
+      "description": "Genres: Comedy, Ecchi, Romance\nTags:Female Harem/Primarily Female Cast/Surreal Comedy/Male Protagonist/Parody/Meta/Slapstick/Polyamorous/Ensemble Cast/Primarily Teen Cast/Tsundere/Heterosexual/Found Family/Seinen/Kuudere\nThe second season of <i>Kimi no Koto ga Dai Dai Dai Dai Daisuki na 100-nin no Kanojo.</i><br><br>\nRentaro meets new soulmates, balancing comedic chaos and heartfelt moments as his relationships deepen.\n<br><br>\n(Source: Crunchyroll News)"
     },
     {
       "id": "tt32741637",
@@ -54,7 +54,7 @@
       "type": "series",
       "name": "ZENSHU",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176273-whKlFCswinEm.jpg",
-      "description": "Genres: Comedy, Romance\nTags:Magic/Isekai/Super Power/Female Protagonist/Drawing/Anthropomorphism/Gods/Otaku Culture/Meta/Heterosexual/Desert/Primarily Adult Cast/Work/Animals/Office Lady/Robots/Elf/Archery/Tokusatsu/Henshin/Office\nAfter graduating from high school, Natsuko Hirose starts her career as an animator. Her talent quickly flourishes, and she makes her debut as a director in no time. Her first anime becomes a massive hit, sparking a social phenomenon and earning her recognition as an up-and-coming genius director. Her next project is set to be a romantic comedy movie themed around first love! However, having never been in love herself, Natsuko struggles to understand the concept of first love, and as a result, she’s unable to create the storyboard, causing the movie production to come to a standstill.<br>\n<br>\n(Source: MAPPA)"
+      "description": "Genres: Comedy, Romance\nTags:Magic/Isekai/Super Power/Female Protagonist/Drawing/Anthropomorphism/Gods/Meta/Otaku Culture/Heterosexual/Desert/Primarily Adult Cast/Work/Animals/Office Lady/Robots/Elf/Archery/Tokusatsu/Henshin/Office\nAfter graduating from high school, Natsuko Hirose starts her career as an animator. Her talent quickly flourishes, and she makes her debut as a director in no time. Her first anime becomes a massive hit, sparking a social phenomenon and earning her recognition as an up-and-coming genius director. Her next project is set to be a romantic comedy movie themed around first love! However, having never been in love herself, Natsuko struggles to understand the concept of first love, and as a result, she’s unable to create the storyboard, causing the movie production to come to a standstill.<br>\n<br>\n(Source: MAPPA)"
     },
     {
       "id": "tt33059860",
@@ -106,18 +106,18 @@
       "description": "Genres: Adventure, Comedy, Fantasy\nTags:Isekai/Politics/Economics/Work/Demons/Tsundere/Magic/Male Protagonist/Elf/Kemonomimi/Monster Girl/Heterosexual/Anthropomorphism/Slapstick\nIn an alternate fantasy world, the Demon King reigns with a formidable army led by his Four Heavenly Kings. One happens to be Uchimura Denosuke, a normal salaryman unexpectedly plucked from his mundane life by the Demon King himself. But even in this new realm, Uchimura is bestowed no particular powers. Can he survive treacherous missions with only the knowledge of an office worker?<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt33384314",
-      "type": "series",
-      "name": "Ameku M.D.: Doctor Detective",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176642-lgDtPlodCMRm.jpg",
-      "description": "Genres: Mystery, Slice of Life\nTags:Medicine/Detective/Female Protagonist/Episodic/Crime/Primarily Adult Cast/Police/Twins\nTen’ikai General Hospital’s Supervisory Department of Diagnostic Pathology handles cases other physicians deem too difficult to treat. It’s also where bizarre mysteries surface, from unexplained illnesses to strange murders even the police can’t solve. At the center of it all is Takao Ameku, a brilliant doctor determined to reveal the shocking truth behind these anomalies.\n<br><br>\n(Source: Crunchyroll)"
-    },
-    {
       "id": "tt32579866",
       "type": "series",
       "name": "Bogus Skill <<Fruitmaster>> ~About that time I became able to eat unlimited numbers of Skill Fruits (that kill you)~",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178100-GF4dKSrkdByJ.jpg",
       "description": "Genres: Action, Adventure, Fantasy\nTags:Magic/Adoption/Swordplay/Agriculture/Primarily Female Cast/Necromancy/Zombie\nIn a world where eating “Skill Fruits” grants special powers, Light, a boy who seeks to become the world’s greatest adventurer, obtains the <<Fruitmaster>> skill, a bogus skill specializing in fruit cultivation that is completely useless in combat.<br>\n<br>\nEating a second “Skill Fruit” results in death, so there are no do-overs. Meanwhile, his childhood friend Rena, who promised to become an adventurer with him, achieves S Rank in record time, and the gap between them widens.<br>\n<br>\nLight spends his days farming and training with a sword, but one day, he accidentally eats a second “Skill Fruit.”<br>\n<br>\n“Why am I not dying?!”<br>\n<br>\nLight avoids certain death and learns the incredible true power of the <<Fruitmaster>> skill: he can eat as many “Skill Fruits” as he wants! His overpowered ability allows him to gain an ability every time he eats one, for an unlimited number of times!! The worst skill ever is actually the best skill ever!!!<br>\n<br>\n(Source: Crunchyroll)<br><br>\n<i>Note: Each episode streamed 1 week early on ABEMA and Crunchyroll. The original TV broadcast started on January 7, 2025.</i>"
+    },
+    {
+      "id": "tt33384314",
+      "type": "series",
+      "name": "Ameku M.D.: Doctor Detective",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176642-lgDtPlodCMRm.jpg",
+      "description": "Genres: Mystery, Slice of Life\nTags:Medicine/Detective/Female Protagonist/Episodic/Crime/Primarily Adult Cast/Police/Twins\nTen’ikai General Hospital’s Supervisory Department of Diagnostic Pathology handles cases other physicians deem too difficult to treat. It’s also where bizarre mysteries surface, from unexplained illnesses to strange murders even the police can’t solve. At the center of it all is Takao Ameku, a brilliant doctor determined to reveal the shocking truth behind these anomalies.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt10777610",
@@ -166,7 +166,7 @@
       "type": "series",
       "name": "From Bureaucrat to Villainess: Dad's Been Reincarnated!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx172453-7iYNTAEZpNsJ.png",
-      "description": "Genres: Comedy, Fantasy\nTags:Villainess/Seinen/School/Video Games/Female Protagonist/Otaku Culture/Meta/Gender Bending/Isekai/Primarily Teen Cast/Mixed Gender Harem/Age Regression/Magic/Male Protagonist/Primarily Male Cast/Matchmaking/Royal Affairs/Swordplay/Nekomimi/Tsundere/Maids/Surreal Comedy/Chibi/Parody\nAfter a traffic accident, 52-year-old civil servant Kenzaburou Tondabayashi awakens to find he's become Grace Auvergne, a duke's daughter, and more importantly the villainess of an otome game. Not wanting to get in the way of the happy endings of the young characters around him, Grace sets out to play the role of the villain, but whether it's due to Kenzaburou's memories of being an affectionate parent getting in the way or not being able to remember those pesky foreign names properly, it ends up being a lot harder than it looks... "
+      "description": "Genres: Comedy, Fantasy\nTags:Villainess/Seinen/School/Video Games/Female Protagonist/Otaku Culture/Meta/Gender Bending/Isekai/Elderly Protagonist/Mixed Gender Harem/Age Regression/Magic/Male Protagonist/Surreal Comedy/Primarily Teen Cast/Matchmaking/Parody/Royal Affairs/Primarily Male Cast/Swordplay/Family Life/Nekomimi/Tsundere/Maids/Chibi\nAfter a traffic accident, 52-year-old civil servant Kenzaburou Tondabayashi awakens to find he's become Grace Auvergne, a duke's daughter, and more importantly the villainess of an otome game. Not wanting to get in the way of the happy endings of the young characters around him, Grace sets out to play the role of the villain, but whether it's due to Kenzaburou's memories of being an affectionate parent getting in the way or not being able to remember those pesky foreign names properly, it ends up being a lot harder than it looks... "
     },
     {
       "id": "tt34621652",
