Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -222,7 +222,7 @@
       "type": "series",
       "name": "Flower and Asura",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178022-gB3zAfazGBJ6.jpg",
-      "description": "Genres: Drama, Slice of Life\nTags:Acting/School/School Club/Primarily Teen Cast/Tsundere/Female Protagonist/Coastal/Seinen/LGBTQ+ Themes\nOn the picturesque island of Tonakijima with a population of only 600, Hana’s favorite pastime is reading literature to the island’s children. Her narration skills are second to none, and Mizuki, the president of the school’s broadcasting club immediately recognizes Hana’s ability to engage with others and draw them into her recitations. Invited by Mizuki to join the club, Hana embarks on a journey to discover her true love of reading — and maybe even change the course of her life along the way.<br><br>\n\n(Source: HIDIVE)"
+      "description": "Genres: Drama, Slice of Life\nTags:Acting/School/School Club/Primarily Teen Cast/Female Protagonist/Coastal/Tsundere/Seinen/LGBTQ+ Themes\nOn the picturesque island of Tonakijima with a population of only 600, Hana’s favorite pastime is reading literature to the island’s children. Her narration skills are second to none, and Mizuki, the president of the school’s broadcasting club immediately recognizes Hana’s ability to engage with others and draw them into her recitations. Invited by Mizuki to join the club, Hana embarks on a journey to discover her true love of reading — and maybe even change the course of her life along the way.<br><br>\n\n(Source: HIDIVE)"
     },
     {
       "id": "tt24326724",
@@ -278,21 +278,21 @@
       "type": "series",
       "name": "Momentary Lily",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177159-Yt7VNCVjlnxR.jpg",
-      "description": "Genres: Action\nTags:Primarily Female Cast/Female Protagonist/Post-Apocalyptic/Urban/Survival/Primarily Teen Cast/Super Power/Food/Swordplay/Henshin/Urban Fantasy/Video Games/CGI/Cute Girls Doing Cute Things/Chibi\nRobotic invaders wiped out all life, but Renge fights to survive using her powers. With no memories, she roams the city until she meets five other young women, each with unique abilities. Together, they make the most of their lives, cooking delicious meals between battles with mechanical monstrosities. As they uncover the secrets of their powers and pasts, they find strength in their friendship.<br><br>\n\n(Source: Crunchyroll)"
+      "description": "Genres: Action\nTags:Primarily Female Cast/Female Protagonist/Post-Apocalyptic/Urban/Survival/Primarily Teen Cast/Food/Super Power/Swordplay/Henshin/Urban Fantasy/Video Games/CGI/Cute Girls Doing Cute Things/Chibi\nRobotic invaders wiped out all life, but Renge fights to survive using her powers. With no memories, she roams the city until she meets five other young women, each with unique abilities. Together, they make the most of their lives, cooking delicious meals between battles with mechanical monstrosities. As they uncover the secrets of their powers and pasts, they find strength in their friendship.<br><br>\n\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32485245",
       "type": "series",
       "name": "I Want to Escape from Princess Lessons",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170650-iVQC67atMVj3.png",
-      "description": "Genres: Comedy, Fantasy, Romance\nTags:Female Protagonist/Ojou-sama/Royal Affairs/Foreign/Shoujo/Fishing/Cute Girls Doing Cute Things\nLeticia Dorman, daughter of a duke, is less than thrilled to be engaged to a crown prince. Betrothed since childhood and trained to be queen, she always hoped Prince Clarke would fall for someone else one day. So when he shows up at a ball with another woman, Lettie excitedly retreats to the countryside to start her new life—only for Clarke to appear, determined to win her heart.<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Fantasy, Romance\nTags:Female Protagonist/Royal Affairs/Shoujo/Ojou-sama/Foreign/Fishing/Cute Girls Doing Cute Things\nLeticia Dorman, daughter of a duke, is less than thrilled to be engaged to a crown prince. Betrothed since childhood and trained to be queen, she always hoped Prince Clarke would fall for someone else one day. So when he shows up at a ball with another woman, Lettie excitedly retreats to the countryside to start her new life—only for Clarke to appear, determined to win her heart.<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt29135397",
       "type": "series",
       "name": "BanG Dream! Ave Mujica",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169295-WxoGTeMbje4T.jpg",
-      "description": "Genres: Drama, Music, Psychological\nTags:Band/Female Protagonist/Primarily Female Cast/Full CGI/Primarily Teen Cast/Metal Music/Acting/Rock Music/Musical Theater/Urban/Ojou-sama\n<i>\"Will you give me the rest of your life?\"</i>\n<br><br>\nAfter losing everything in a single night, Sakiko Togawa reaches out toward an even deeper abyss, one that will drag everyone around her down as well. Gathering the lives of girls burdened with their own troubles and desires, Sakiko raises the curtain on a perfect masquerade.\n<br><br>\n<i>\"Welcome to the world of Ave Mujica.\"<br><br></i>\n\nOn a stage where sorrow, death, fear, love—even the solace of forgetting—are stripped away, will their masks be torn off and shatter into oblivion, or will they….<br><br>\n(Source: Bushiroad) "
+      "description": "Genres: Drama, Music, Psychological\nTags:Band/Female Protagonist/Primarily Female Cast/Primarily Teen Cast/Metal Music/Acting/Full CGI/Rock Music/Musical Theater/Urban/Ojou-sama\n<i>\"Will you give me the rest of your life?\"</i>\n<br><br>\nAfter losing everything in a single night, Sakiko Togawa reaches out toward an even deeper abyss, one that will drag everyone around her down as well. Gathering the lives of girls burdened with their own troubles and desires, Sakiko raises the curtain on a perfect masquerade.\n<br><br>\n<i>\"Welcome to the world of Ave Mujica.\"<br><br></i>\n\nOn a stage where sorrow, death, fear, love—even the solace of forgetting—are stripped away, will their masks be torn off and shatter into oblivion, or will they….<br><br>\n(Source: Bushiroad) "
     },
     {
       "id": "tt34621563",
